# simple-emscripten-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  testconfig
.github/workflows/: cmake-multi-platform.yml  cmake-test.yml  emscripten-build.yml
Example/: CMakeLists.txt  MyExample.cpp
Examples/: CMakeLists.txt
Examples/DrawLayers/: Application.cpp  Application.h  DrawLayer.cpp  PostEffects.cpp  PostEffects.h  main.cpp
Examples/Particles/: Application.cpp  Application.h  PostEffects.cpp  main.cpp
Examples/PostEffects/: Application.cpp  Application.h  DrawLayer.h  main.cpp
Examples/Resources/Shaders/: basicinstanced.vert  combineLightBloom.frag  cracks.glsl  gaussHoriz.frag  lastPass.frag  lightning.frag  sprite_direct.vert  test.frag  wankyCircle.frag  water.frag
Examples/Shaders/: Application.cpp  Application.h  ShaderUI.cpp  ShaderUI.h  main.cpp
Examples/Sprites/: Application.cpp  Application.h
Examples/Text/: Application.cpp  Application.h  main.cpp
Examples/VertexArray/: Application.cpp  Application.h  main.cpp
Resources/: basic.vert  basic2.vert  basicSprite.vert  basicinstanced.vert  basicinstanced2.vert  brightness.frag  combineBloom.frag  consts.glsl  drawSwirl.frag  drawVelField.frag  fullpass.frag  gaussVert.frag  lightning.frag  lines.frag  pnoise.glsl  rhoFieldInit.frag  swirl.frag  test.frag  testchain.frag  text.frag  text2.frag  textBorder.frag  texture.frag  velFieldInit.frag  voronoi.glsl  water.frag
Resources/Shaders/: basicinstanced.vert  basictex.vert  brightness.frag  combineBloom.frag  combineLightBloom.frag  combineSmoke.frag  consecration.frag  cracks.glsl  fireBall.frag  fullpass.frag  gaussVert.frag  lightningBall.frag  text.frag  textBorder.frag  texture.frag  toneMap.frag
cmake/: CompilerFlags.cmake  CompilerWarnings.cmake  External.cmake
cmake/modules/: FindMoltenVK.cmake  FindPVRAssets.cmake  FindPVRCore.cmake  FindVulkanMemoryAllocator.cmake  FindWayland.cmake  FindX11_XCB.cmake  Findglslang.cmake  Findpugixml.cmake  Findtinygltf.cmake
cmake/toolchains/: Darwin-gcc-ios.cmake  Linux-gcc-armv7hf.cmake  Linux-gcc-armv8.cmake  Linux-gcc-x86_32.cmake  Linux-gcc-x86_64.cmake  QNX-gcc-armv8.cmake  QNX-gcc-x86_32.cmake
cmake/utilities/: spirv.cmake  submodules.cmake
include/: Batch.h  BatchConfig.h  BlendParams.h  Color.h  DrawLayer.h  EglContext.h  Font.h  FrameBuffer.h  GLTypeDefs.h  IncludesGl.h  Particles.h  PostEffects.h  Rect.h  Rectangle.h  RenderTarget.h  Renderer.h  Shader.h  ShaderHolder.h  ShaderLoader.h  Sprite.h  Text.h  Texture.h  Transform.h  Vector2.h  Vertex.h  VertexArray.h  VertexArrayObject.h  View.h  Window.h
include/Gui/: imconfig.h
include/Utils/: IOUtils.h  ObjectPool.h  RandomTools.h  Vector2.h
new-project-test/: CMakeLists.txt
site/: project.html  project.js
src/: Application.cpp  Application.h  Batch.cpp  Batch.h  BatchConfig.cpp  BlendParams.cpp  Color.cpp  CommonShaders.inl  DrawLayer.cpp  EglContext.cpp  Font.cpp  Font.h  FrameBuffer.cpp  GLTypeDefs.cpp  IncludesGl.h  ParticleEffect.cpp  ParticleEffect.h  Particles.cpp  Particles.h  PostEffects.cpp  Rect.h  Rectangle.cpp  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderHolder.cpp  ShaderUI.h  Sprite.cpp  Text.cpp  Texture.cpp  Texture.h  Transform.cpp  Vector2.h  Vertex.h  VertexArray.cpp  VertexArrayObject.cpp  View.cpp  (+4 more)
src/Example/: Application.cpp  Application.h  DrawLayer.cpp  DrawLayer.h  Grid.cpp  Grid.h  GridNeighbourSearcher.cpp  GridNeighbourSearcher.h  PostEffects.cpp  PostEffects.h  ShaderUI.cpp  ShaderUI.h  main.cpp
src/Gui/: imgui.cpp  imgui_demo.cpp  imgui_widgets.cpp
src/Tests/: main.cpp  test_context.cc  test_shader.cc
src/Utils/: IO.h  ObjectPool.h  RandomTools.h  Vector2.h
